--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy | LABYRINTH OF MINDS</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Privacy Policy</h1>
+    <img class="image" src="logo.png">
+    <h1>Privacy Policy | LABYRINTH OF MINDS</h1>
   </header>
   <main>
     <section id="policy">
@@ -33,6 +34,9 @@
         <li>The site owner may lose trust from clients due to privacy concerns.</li>
         <li>There is a chance that the SSL certificate or site certificate might be compromised or deemed invalid due to a breach of terms.</li>
       </ul>
+      <p>Here is our SSL CERTIFICATES:
+        <img class="ssl" src="ssl.png">
+      </p>
       <p>
         For more details, you can refer to <a href="https://www.google.com" target="_blank">this Google resource</a>.
       </p>
@@ -46,7 +50,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2024 Your Company Name</p>
+    <p>&copy; 2024 @LabyrinthOfMinds</p>
   </footer>
   <script src="script.js"></script>
 </body>
