--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="contact">
       <h2>Contact Us</h2>
       <p>
-        If you have concerns about our privacy practices, feel free to <a href="mailto:support@example.com">contact us</a>.
+        If you have concerns about our privacy practices, feel free to <a href="mailto:pergap3@gmail.com">contact us</a>.
       </p>
     </section>
   </main>
