--- a/index.html
+++ b/index.html
@@ -4,54 +4,108 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy | LABYRINTH OF MINDS</title>
-  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <img class="image" src="logo.png">
-    <h1>Privacy Policy | LABYRINTH OF MINDS</h1>
+<body class="bg-gray-900 text-white font-sans leading-relaxed">
+  <!-- Header -->
+  <header class="bg-gradient-to-r from-blue-500 to-indigo-600 p-6 text-center shadow-lg">
+    <div class="flex items-center justify-center gap-4">
+      <img src="logo.png" alt="Logo" class="h-16 w-16 rounded-full object-cover">
+      <h1 class="text-3xl font-bold">Privacy Policy | LABYRINTH OF MINDS</h1>
+    </div>
   </header>
-  <main>
-    <section id="policy">
-      <h2>Your Privacy Matters</h2>
-      <p>We value your trust and are committed to protecting your privacy. This document outlines how we handle your data, including IP logging and measures to ensure your security.</p>
+
+  <!-- Main Content -->
+  <main class="container mx-auto my-8 p-6 bg-gray-800 rounded-lg shadow-lg space-y-8">
+    <!-- Introduction -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Your Privacy Matters</h2>
+      <p class="text-gray-300">
+        At LABYRINTH OF MINDS, we prioritize your trust by safeguarding your data. This policy details how we manage your information, including advanced measures for logging and securing IP data.
+      </p>
     </section>
-    
+
+    <!-- IP Logging -->
     <section id="ip-logs">
-      <h2>IP Logging and Your Privacy</h2>
-      <p>
-        IP addresses are logged to help us:
-      </p>
-      <ul>
-        <li>Secure our platform from unauthorized access or fraud.</li>
-        <li>Debug and resolve technical issues effectively.</li>
-        <li>Comply with legal obligations, if necessary.</li>
+      <h2 class="text-2xl font-bold mb-4">IP Logging and Your Privacy</h2>
+      <p class="text-gray-300 mb-4">We use IP logging to:</p>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2">
+        <li>Protect against unauthorized access or fraudulent activities.</li>
+        <li>Diagnose and resolve technical issues promptly.</li>
+        <li>Comply with legal and regulatory obligations.</li>
       </ul>
-      <p>
-        However, if a site server detects that the site owner is extracting or logging IP addresses without valid reasons, the following risks may arise:
+      <p class="text-gray-300 mt-4">
+        Risks of improper IP logging include loss of trust, potential security breaches, and compliance violations. To avoid this, we employ advanced techniques:
       </p>
-      <ul>
-        <li>The site owner may lose trust from clients due to privacy concerns.</li>
-        <li>There is a chance that the SSL certificate or site certificate might be compromised or deemed invalid due to a breach of terms.</li>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2">
+        <li>**Anonymization:** Logging only partial IP addresses to maintain user privacy.</li>
+        <li>**Encryption:** Encrypting log files using industry-standard algorithms like AES-256.</li>
+        <li>**Retention Policy:** Automatically deleting logs after 30 days unless required by law.</li>
       </ul>
-      <p>Here is our SSL CERTIFICATES:
-        <img class="ssl" src="ssl.png">
-      </p>
-      <p>
-        For more details, you can refer to <a href="https://www.google.com" target="_blank">this Google resource</a>.
-      </p>
     </section>
-    
+
+    <!-- Advanced Techniques for IP Logs -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Advanced Methods for IP Logging</h2>
+      <p class="text-gray-300 mb-4">
+        We use modern techniques to ensure that your data is handled securely and ethically:
+      </p>
+      <div class="bg-gray-700 p-4 rounded-lg shadow-lg">
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">1. Secure Storage</h3>
+        <p class="text-gray-300">
+          Logs are stored in a secure database with restricted access, ensuring compliance with data protection standards like GDPR and CCPA.
+        </p>
+      </div>
+      <div class="bg-gray-700 p-4 rounded-lg shadow-lg mt-4">
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">2. Real-Time Monitoring</h3>
+        <p class="text-gray-300">
+          Suspicious activities are flagged using AI-based monitoring tools, providing real-time alerts to prevent data breaches.
+        </p>
+      </div>
+      <div class="bg-gray-700 p-4 rounded-lg shadow-lg mt-4">
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">3. Privacy-Centric Logging</h3>
+        <p class="text-gray-300">
+          Logs are aggregated and anonymized wherever possible to reduce exposure of sensitive data.
+        </p>
+      </div>
+    </section>
+
+    <!-- SSL Certificate -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">SSL Certificate</h2>
+      <p class="text-gray-300 mb-4">
+        Your connection to our platform is secured with SSL. This ensures encryption of all data exchanged between you and our servers.
+      </p>
+      <div class="flex items-center justify-center">
+        <img src="ssl.png" alt="SSL Certificate" class="h-32 w-auto shadow-lg rounded-lg">
+      </div>
+    </section>
+
+    <!-- Cookie Policy -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Cookie Policy</h2>
+      <p class="text-gray-300 mb-4">
+        We use cookies to enhance your experience. These include:
+      </p>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2">
+        <li>Essential Cookies: Necessary for the functioning of our site.</li>
+        <li>Performance Cookies: Help us improve site functionality.</li>
+        <li>Marketing Cookies: Used to deliver personalized advertisements.</li>
+      </ul>
+    </section>
+
+    <!-- Contact -->
     <section id="contact">
-      <h2>Contact Us</h2>
-      <p>
-        If you have concerns about our privacy practices, feel free to <a href="mailto:pergap3@gmail.com">contact us</a>.
+      <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
+      <p class="text-gray-300">
+        If you have questions about our privacy practices, feel free to <a href="mailto:pergap3@gmail.com" class="text-indigo-400 underline">email us</a>.
       </p>
     </section>
   </main>
-  <footer>
-    <p>&copy; 2024 @LabyrinthOfMinds</p>
+
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-indigo-600 to-blue-500 p-4 text-center">
+    <p>&copy; 2024 LABYRINTH OF MINDS. All Rights Reserved.</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
