--- a/index.html
+++ b/index.html
@@ -16,56 +16,69 @@
   </header>
 
   <!-- Main Content -->
-  <main class="container mx-auto my-8 p-6 bg-gray-800 rounded-lg shadow-lg space-y-8">
+  <main class="container mx-auto my-8 p-6 bg-gray-800 rounded-lg shadow-lg space-y-12">
     <!-- Introduction -->
     <section>
       <h2 class="text-2xl font-bold mb-4">Your Privacy Matters</h2>
       <p class="text-gray-300">
-        At LABYRINTH OF MINDS, we prioritize your trust by safeguarding your data. This policy details how we manage your information, including advanced measures for logging and securing IP data.
+        At LABYRINTH OF MINDS, we are committed to ensuring your data is safe and handled responsibly. This document outlines our practices for data collection, usage, and protection, emphasizing the measures we take to maintain your trust.
       </p>
     </section>
 
     <!-- IP Logging -->
     <section id="ip-logs">
       <h2 class="text-2xl font-bold mb-4">IP Logging and Your Privacy</h2>
-      <p class="text-gray-300 mb-4">We use IP logging to:</p>
+      <p class="text-gray-300 mb-4">We log IP addresses to:</p>
       <ul class="list-disc pl-6 text-gray-300 space-y-2">
-        <li>Protect against unauthorized access or fraudulent activities.</li>
-        <li>Diagnose and resolve technical issues promptly.</li>
-        <li>Comply with legal and regulatory obligations.</li>
+        <li>Detect and prevent unauthorized access or fraudulent activities.</li>
+        <li>Identify and resolve technical issues efficiently.</li>
+        <li>Meet compliance requirements with applicable laws and regulations.</li>
       </ul>
       <p class="text-gray-300 mt-4">
-        Risks of improper IP logging include loss of trust, potential security breaches, and compliance violations. To avoid this, we employ advanced techniques:
+        To enhance your privacy, we adopt the following practices:
       </p>
       <ul class="list-disc pl-6 text-gray-300 space-y-2">
-        <li>**Anonymization:** Logging only partial IP addresses to maintain user privacy.</li>
-        <li>**Encryption:** Encrypting log files using industry-standard algorithms like AES-256.</li>
-        <li>**Retention Policy:** Automatically deleting logs after 30 days unless required by law.</li>
+        <li><strong>Anonymization:</strong> Masking parts of IP addresses to protect user identity.</li>
+        <li><strong>Encryption:</strong> Securing logs with AES-256 encryption.</li>
+        <li><strong>Retention Policy:</strong> Automatically deleting logs after 30 days unless legally required.</li>
       </ul>
     </section>
 
-    <!-- Advanced Techniques for IP Logs -->
+    <!-- Password Security -->
     <section>
-      <h2 class="text-2xl font-bold mb-4">Advanced Methods for IP Logging</h2>
+      <h2 class="text-2xl font-bold mb-4">Password Security</h2>
+      <p class="text-gray-300">
+        Your account security is a priority. We ensure the safety of your passwords by implementing the following:
+      </p>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2">
+        <li><strong>Hashed Passwords:</strong> All passwords are hashed using advanced algorithms like bcrypt or Argon2, ensuring they are unreadable even in case of a breach.</li>
+        <li><strong>Salted Hashing:</strong> Each password is processed with a unique salt to make brute force attacks nearly impossible.</li>
+        <li><strong>Password Strength Enforcement:</strong> We encourage strong passwords by requiring a combination of uppercase, lowercase, numbers, and special characters.</li>
+      </ul>
+    </section>
+
+    <!-- Advanced Data Protection -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Advanced Data Protection Practices</h2>
       <p class="text-gray-300 mb-4">
-        We use modern techniques to ensure that your data is handled securely and ethically:
+        We use cutting-edge methods to safeguard your data:
       </p>
       <div class="bg-gray-700 p-4 rounded-lg shadow-lg">
-        <h3 class="font-bold text-lg mb-2 text-indigo-400">1. Secure Storage</h3>
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">1. Secure File Storage</h3>
         <p class="text-gray-300">
-          Logs are stored in a secure database with restricted access, ensuring compliance with data protection standards like GDPR and CCPA.
+          Sensitive files are encrypted at rest and stored on servers with restricted access.
         </p>
       </div>
       <div class="bg-gray-700 p-4 rounded-lg shadow-lg mt-4">
-        <h3 class="font-bold text-lg mb-2 text-indigo-400">2. Real-Time Monitoring</h3>
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">2. Regular Security Audits</h3>
         <p class="text-gray-300">
-          Suspicious activities are flagged using AI-based monitoring tools, providing real-time alerts to prevent data breaches.
+          Our systems are audited regularly to detect and patch vulnerabilities before they can be exploited.
         </p>
       </div>
       <div class="bg-gray-700 p-4 rounded-lg shadow-lg mt-4">
-        <h3 class="font-bold text-lg mb-2 text-indigo-400">3. Privacy-Centric Logging</h3>
+        <h3 class="font-bold text-lg mb-2 text-indigo-400">3. Multi-Factor Authentication (MFA)</h3>
         <p class="text-gray-300">
-          Logs are aggregated and anonymized wherever possible to reduce exposure of sensitive data.
+          Access to our admin panel and critical systems requires MFA, adding an extra layer of security.
         </p>
       </div>
     </section>
@@ -74,10 +87,10 @@
     <section>
       <h2 class="text-2xl font-bold mb-4">SSL Certificate</h2>
       <p class="text-gray-300 mb-4">
-        Your connection to our platform is secured with SSL. This ensures encryption of all data exchanged between you and our servers.
+        Your connection to our platform is encrypted using SSL, ensuring the confidentiality of all data transferred between your browser and our servers.
       </p>
       <div class="flex items-center justify-center">
-        <img src="ssl.png" alt="SSL Certificate" class="h-32 w-auto shadow-lg rounded-lg">
+        <img src="ssl.png" alt="SSL Certificate" class="h-48 w-auto shadow-lg rounded-lg">
       </div>
     </section>
 
@@ -85,20 +98,39 @@
     <section>
       <h2 class="text-2xl font-bold mb-4">Cookie Policy</h2>
       <p class="text-gray-300 mb-4">
-        We use cookies to enhance your experience. These include:
+        Cookies help us enhance your browsing experience. We use:
       </p>
       <ul class="list-disc pl-6 text-gray-300 space-y-2">
-        <li>Essential Cookies: Necessary for the functioning of our site.</li>
-        <li>Performance Cookies: Help us improve site functionality.</li>
-        <li>Marketing Cookies: Used to deliver personalized advertisements.</li>
+        <li><strong>Essential Cookies:</strong> Necessary for core functionalities like login sessions.</li>
+        <li><strong>Performance Cookies:</strong> To monitor and improve site performance.</li>
+        <li><strong>Marketing Cookies:</strong> To deliver personalized ads and offers.</li>
       </ul>
+      <p class="text-gray-300 mt-4">
+        You can manage your cookie preferences at any time through your browser settings.
+      </p>
+    </section>
+
+    <!-- GDPR and CCPA Compliance -->
+    <section>
+      <h2 class="text-2xl font-bold mb-4">GDPR and CCPA Compliance</h2>
+      <p class="text-gray-300">
+        We comply with data protection laws, including the General Data Protection Regulation (GDPR) and California Consumer Privacy Act (CCPA). You have the right to:
+      </p>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2">
+        <li>Access your data.</li>
+        <li>Request corrections or deletions.</li>
+        <li>Opt-out of data collection or sale.</li>
+      </ul>
+      <p class="text-gray-300 mt-4">
+        Contact us if you wish to exercise your rights.
+      </p>
     </section>
 
     <!-- Contact -->
     <section id="contact">
       <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
       <p class="text-gray-300">
-        If you have questions about our privacy practices, feel free to <a href="mailto:pergap3@gmail.com" class="text-indigo-400 underline">email us</a>.
+        If you have any questions or concerns, reach out to us at <a href="mailto:pergap3@gmail.com" class="text-indigo-400 underline">pergap3@gmail.com</a>.
       </p>
     </section>
   </main>
