--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         Your connection to our platform is encrypted using SSL, ensuring the confidentiality of all data transferred between your browser and our servers.
       </p>
       <div class="flex items-center justify-center">
-        <img src="ssl.png" alt="SSL Certificate" class="h-48 w-auto shadow-lg rounded-lg">
+        <a href="ssl.png"><img src="ssl.png" alt="SSL Certificate" class="h-48 w-auto shadow-lg rounded-lg"></a>
       </div>
     </section>
 
