--- a/index.html
+++ b/index.html
@@ -87,11 +87,14 @@
     <section>
       <h2 class="text-2xl font-bold mb-4">SSL Certificate</h2>
       <p class="text-gray-300 mb-4">
-        Your connection to our platform is encrypted using SSL, ensuring the confidentiality of all data transferred between your browser and our servers.
+        Your connection to our platform is encrypted using SSL, ensuring the confidentiality of all data transferred between your browser and our servers. We utilize SSL certificates provided by <a href="https://infinityfree.net/" class="text-indigo-400 underline" target="_blank">InfinityFree</a>, a trusted hosting provider known for its robust security measures.
       </p>
       <div class="flex items-center justify-center">
         <a href="ssl.png"><img src="ssl.png" alt="SSL Certificate" class="h-48 w-auto shadow-lg rounded-lg"></a>
       </div>
+      <p class="text-gray-300 mt-4">
+        For more information about InfinityFree's SSL offerings, please visit their <a href="https://forum.infinityfree.com/t/how-to-get-free-ssl-https-on-infinityfree/49323" class="text-indigo-400 underline" target="_blank">official guide</a>.
+      </p>
     </section>
 
     <!-- Cookie Policy -->
@@ -105,8 +108,11 @@
         <li><strong>Performance Cookies:</strong> To monitor and improve site performance.</li>
         <li><strong>Marketing Cookies:</strong> To deliver personalized ads and offers.</li>
       </ul>
-      <p class="text-gray-300 mt-4">
-        You can manage your cookie preferences at any time through your browser settings.
+      <p class="text-gray-300
+::contentReference[oaicite:0]{index=0}
+ 
+      mt-4">
+        You can manage your cookie preferences at any time through your browser settings. Disabling cookies may affect your user experience on our site.
       </p>
     </section>
 
@@ -114,15 +120,16 @@
     <section>
       <h2 class="text-2xl font-bold mb-4">GDPR and CCPA Compliance</h2>
       <p class="text-gray-300">
-        We comply with data protection laws, including the General Data Protection Regulation (GDPR) and California Consumer Privacy Act (CCPA). You have the right to:
+        We comply with major data protection regulations, ensuring your rights are protected under the General Data Protection Regulation (GDPR) and the California Consumer Privacy Act (CCPA). You have the following rights:
       </p>
-      <ul class="list-disc pl-6 text-gray-300 space-y-2">
-        <li>Access your data.</li>
-        <li>Request corrections or deletions.</li>
-        <li>Opt-out of data collection or sale.</li>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2 mt-4">
+        <li><strong>Access:</strong> Request access to your data and know how it is used.</li>
+        <li><strong>Correction:</strong> Request corrections to inaccurate or incomplete data.</li>
+        <li><strong>Deletion:</strong> Request the deletion of your personal data.</li>
+        <li><strong>Opt-Out:</strong> Opt-out of data collection or the sale of your data.</li>
       </ul>
       <p class="text-gray-300 mt-4">
-        Contact us if you wish to exercise your rights.
+        To exercise these rights, please contact us via email or through the contact form available on our website.
       </p>
     </section>
 
@@ -130,8 +137,12 @@
     <section id="contact">
       <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
       <p class="text-gray-300">
-        If you have any questions or concerns, reach out to us at <a href="mailto:pergap3@gmail.com" class="text-indigo-400 underline">pergap3@gmail.com</a>.
+        If you have any questions, concerns, or requests regarding your privacy or our practices, you can reach us at:
       </p>
+      <ul class="list-disc pl-6 text-gray-300 space-y-2 mt-4">
+        <li>Email: <a href="mailto:pergap3@gmail.com" class="text-indigo-400 underline">pergap3@gmail.com</a></li>
+        <li>Support Form: Available on our <a href="https://labyrinthofminds.com/support" class="text-indigo-400 underline">Support Page</a>.</li>
+      </ul>
     </section>
   </main>
 
